--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
             provider.addScope('https://www.googleapis.com/auth/contacts.readonly');
             // [END addscopes]
             // [START signin]
+            /*
             firebase.auth().signInWithPopup(provider).then(function(result) {
                 // This gives you a Google Access Token. You can use it to access the Google API.
                 var token = result.credential.accessToken;
@@ -60,6 +61,9 @@
                 }
                 // [END_EXCLUDE]
             });
+            
+            */
+            firebase.auth().signInWithRedirect(provider);
             // [END signin]
         } else {
             // [START signout]
