--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
         var config = {
             apiKey: "AIzaSyCLXyUx0MUlJsRO6hl48Jc4oI2ndBnYsrA",
             authDomain: "hackablegame-5621a.firebaseapp.com",
-            databaseURL: "https://hackablegame-5621a.firebaseio.com",
+            databaseURL: "https://hackablegame-5621a.firebaseio.com/",
             projectId: "hackablegame-5621a",
             storageBucket: "hackablegame-5621a.appspot.com",
             messagingSenderId: "635734972356"
@@ -18,105 +18,7 @@
         <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
     </head>
     <body></body>
-    <script>
-      function toggleSignIn() {
-        if (!firebase.auth().currentUser) {
-          // [START createprovider]
-          var provider = new firebase.auth.GoogleAuthProvider();
-          // [END createprovider]
-          // [START addscopes]
-          provider.addScope('https://www.googleapis.com/auth/plus.login');
-          // [END addscopes]
-          // [START signin]
-          firebase.auth().signInWithRedirect(provider);
-          // [END signin]
-        } else {
-          // [START signout]
-          firebase.auth().signOut();
-          // [END signout]
-        }
-        // [START_EXCLUDE]
-        document.getElementById('quickstart-sign-in').disabled = true;
-        // [END_EXCLUDE]
-      }
-      // [END buttoncallback]
-      /**
-       * initApp handles setting up UI event listeners and registering Firebase auth listeners:
-       *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
-       *    out, and that is where we update the UI.
-       *  - firebase.auth().getRedirectResult(): This promise completes when the user gets back from
-       *    the auth redirect flow. It is where you can get the OAuth access token from the IDP.
-       */
-      function initApp() {
-        // Result from Redirect auth flow.
-        // [START getidptoken]
-        firebase.auth().getRedirectResult().then(function(result) {
-          if (result.credential) {
-            // This gives you a Google Access Token. You can use it to access the Google API.
-            var token = result.credential.accessToken;
-            // [START_EXCLUDE]
-            document.getElementById('quickstart-oauthtoken').textContent = token;
-          } else {
-            document.getElementById('quickstart-oauthtoken').textContent = 'null';
-            // [END_EXCLUDE]
-          }
-          // The signed-in user info.
-          var user = result.user;
-        }).catch(function(error) {
-          // Handle Errors here.
-          var errorCode = error.code;
-          var errorMessage = error.message;
-          // The email of the user's account used.
-          var email = error.email;
-          // The firebase.auth.AuthCredential type that was used.
-          var credential = error.credential;
-          // [START_EXCLUDE]
-          if (errorCode === 'auth/account-exists-with-different-credential') {
-            alert('You have already signed up with a different auth provider for that email.');
-            // If you are using multiple auth providers on your app you should handle linking
-            // the user's accounts here.
-          } else {
-            console.error(error);
-          }
-          // [END_EXCLUDE]
-        });
-        // [END getidptoken]
-        // Listening for auth state changes.
-        // [START authstatelistener]
-        firebase.auth().onAuthStateChanged(function(user) {
-          if (user) {
-            // User is signed in.
-            var displayName = user.displayName;
-            var email = user.email;
-            var emailVerified = user.emailVerified;
-            var photoURL = user.photoURL;
-            var isAnonymous = user.isAnonymous;
-            var uid = user.uid;
-            var providerData = user.providerData;
-            // [START_EXCLUDE]
-            alert('Signed in');
-            document.getElementById('quickstart-sign-in').textContent = 'Sign out';
-            document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
-            // [END_EXCLUDE]
-          } else {
-            // User is signed out.
-            // [START_EXCLUDE]
-            alert('Signed out');
-            document.getElementById('quickstart-sign-in').textContent = 'Sign in with Google';
-            //document.getElementById('quickstart-account-details').textContent = 'null';
-            //document.getElementById('quickstart-oauthtoken').textContent = 'null';
-            // [END_EXCLUDE]
-          }
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in').disabled = false;
-          // [END_EXCLUDE]
-        });
-        // [END authstatelistener]
-        document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
-      }
-      window.onload = function() {
-        initApp();
-      };
+    <script src="login.js">
     </script>
     <button  class="mdl-button mdl-js-button mdl-button--raised" id="quickstart-sign-in">Sign in with Google</button>
     <code id="quickstart-account-details">null</code>
