--- a/app/game1.html
+++ b/app/game1.html
@@ -1,2 +1,10 @@
-<body>aaaaaaaaaaaaaaaaaa<br>test!
+<html>
+    <head>
+        <script></script>
+        <title>game PLAY!</title>
+    </head>
+    <body>aaaaaaaaaa
+        <canvas id="canvas"></canvas>
+        <script src="game1.js"></script>
     </body>
+</html>
