--- a/test/webpagetest/webpage.html
+++ b/test/webpagetest/webpage.html
@@ -5,15 +5,17 @@
   <link href="page.css" rel="stylesheet">
 </head>
 <body>
-  <b>GIVING THE EXCITEMENT OF CODING TO MORE PEOPLE</b>
-  <h1 style="color:Blue;">CODING</h1>
-  <p>Coding is something you do everyday, but in different forms. In order for something to work, you have to follow an order of steps. That applies for coding too. In order for the computer to do something,you must input specific steps for the computer to follow. Coding is something anyone can do and enjoy.</p>
-  <p>Here is one of our projects.</p>
-  <h1 style="color:Red;">HACKED</h1>
-  <p>Our application will give you more weapons or items in games that you are playing.</p>
-  <p>When you are playing games on your device, this application allows you to get more weapons or items that you need to beat the game.</p>
-  <p>Keep in mind Hacked will not restore your charecters health or shield.</p>
-  <h1>CREDITS</h1>
-  <p>Made by:</p1>
+  <b>GIVING THE EXCITEMENT OF CODING TO MORE PEOPLE</b><div></div>
+  <div id="table">
+    <h1 style="color:Blue;">CODING</h1>
+    <p>Coding is something you do everyday, but in different forms. In order for something to work, you have to follow an order of steps. That applies for coding too. In order for the computer to do something,you must input specific steps for the computer to follow. Coding is something anyone can do and enjoy.</p>
+    <p>Here is one of our projects.</p>
+    <h1 style="color:Red;">HACKED</h1>
+    <p>Our application will give you more weapons or items in games that you are playing.</p>
+    <p>When you are playing games on your device, this application allows you to get more weapons or items that you need to beat the game.</p>
+    <p>Keep in mind Hacked will not restore your charecters health or shield.</p>
+    <h1>CREDITS</h1>
+    <p>Made by:</p1>
+  </div>
 </body>
 </html>
