--- a/app/game1.html
+++ b/app/game1.html
@@ -1,6 +1,19 @@
 <html>
     <head>
-        <script></script>
+        <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
+        <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyCLXyUx0MUlJsRO6hl48Jc4oI2ndBnYsrA",
+            authDomain: "hackablegame-5621a.firebaseapp.com",
+            databaseURL: "https://hackablegame-5621a.firebaseio.com/",
+            projectId: "hackablegame-5621a",
+            storageBucket: "hackablegame-5621a.appspot.com",
+            messagingSenderId: "635734972356"
+        };
+        firebase.initializeApp(config);
+        </script>    
+
         <title>game PLAY!</title>
     </head>
     <body>aaaaaaaaaa
