--- a/app/game1.html
+++ b/app/game1.html
@@ -16,7 +16,8 @@
 
         <title>game PLAY!</title>
     </head>
-    <body>aaaaaaaaaa
+    <body>
+        <script src="../test/walking/Slib.js"></script>
         <canvas id="canvas"></canvas>
         <script src="game1.js"></script>
     </body>
